--- a/style.css
+++ b/style.css
@@ -41,3 +41,54 @@ button {
   float: left;
   cursor: pointer;
 }
+
+.input{
+  visibility: hidden;
+}
+
+.label{
+  position: absolute;
+  width: 80px;
+  height: 40px;
+  background-color: lightgray;
+  border-radius: 20px;
+  cursor: pointer;
+}
+
+.circle {
+  width: 34px;
+  background-color: white;
+  height: 34px;
+  border-radius: 50px;
+  top: 3px;
+  left: 3px;
+  position: absolute;
+  animation: toggleOff .4s linear forwards;
+}
+
+.input:checked + .label {
+  background-color: rgb(255, 255, 255);
+}
+
+.input:checked + .label .circle {
+  animation: toggleOn 0.4s linear forwards;
+  background-color: black;
+} 
+
+@keyframes toggleOn {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(40px);
+  }
+}
+
+@keyframes toggleOff {
+  0% {
+    transform: translateX(40px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
